修改了《设计的意义》

--- a/_posts/2023-07-12-about-me.md
+++ b/_posts/2023-07-12-about-me.md
@@ -1,9 +1,8 @@
 ---
-layout：article
-title："关于我"
+layout: article
+title: "关于我"
 ---
 
 # 设计的意义
 
 ### 面向客户，设计是技术，面向自己设计是艺术，技术是用来解决问题，艺术是用来提升美感，不断的在艺术与技术之间寻求平衡。
-
